# chiricoca

./: .gitignore  MANIFEST.in  README.md  environment.yml  main.py  pyproject.toml
src/chiricoca/: README.md  config.py  version.py
src/chiricoca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chiricoca/base/: labels.py  sorting.py  weights.py
src/chiricoca/base/collections/: labels.py
src/chiricoca/colors/: base.py  utils.py
src/chiricoca/geo/: distance.py  figures.py  grid.py  kde.py  utils.py
src/chiricoca/maps/: __init__.py  bubble.py  choropleth.py  heatmap.py  lisa.py  utils.py
src/chiricoca/networks/: stats.py
src/chiricoca/tables/: __init__.py  areas.py  bars.py  bubbles.py  heatmap.py  marimekko.py  scatter.py  slopegraph.py  ternary.py
src/chiricoca/text/: word_cloud.py
