[project]
name = "chiricoca"
version = "0.1.2"
description = "Módulo con implementaciones de visualizaciones y herramientas utilitarias de análisis de datos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "contextily>=1.7.0",
    "cytoolz>=1.1.0",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "kdepy>=1.1.12",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "matplotlib-scalebar>=0.9.0",
    "networkx>=3.6.1",
    "pandas>=3.0.1",
    "pymunk>=7.2.0",
    "python-ternary>=1.0.8",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "spectra>=0.1.0",
    "wordcloud>=1.9.6",
]
